# This doesn't define any symbols. y
# src/crn_hash_map.cpp

set(crunch_Source 
      inc/crn_decomp.h
      inc/crnlib.h
      inc/dds_defs.h
      src/crnlib.cpp
      src/crn_arealist.cpp
      src/crn_arealist.h
      src/crn_assert.cpp
      src/crn_assert.h
      src/crn_atomics.h
      src/crn_buffer_stream.h
      src/crn_cfile_stream.h
      src/crn_checksum.cpp
      src/crn_checksum.h
      src/crn_clusterizer.h
      src/crn_color.h
      src/crn_colorized_console.cpp
      src/crn_colorized_console.h
      src/crn_command_line_params.cpp
      src/crn_command_line_params.h
      src/crn_comp.cpp
      src/crn_comp.h
      src/crn_console.cpp
      src/crn_console.h
      src/crn_core.cpp
      src/crn_core.h
      src/crn_data_stream.cpp
      src/crn_data_stream.h
      src/crn_data_stream_serializer.h
      src/crn_dds_comp.cpp
      src/crn_dds_comp.h
      src/crn_decomp.cpp
      src/crn_dxt.cpp
      src/crn_dxt.h
      src/crn_dxt1.cpp
      src/crn_dxt1.h
      src/crn_dxt5a.cpp
      src/crn_dxt5a.h
      src/crn_dxt_endpoint_refiner.cpp
      src/crn_dxt_endpoint_refiner.h
      src/crn_dxt_fast.cpp
      src/crn_dxt_fast.h
      src/crn_dxt_hc.cpp
      src/crn_dxt_hc.h
      src/crn_dxt_hc_common.cpp
      src/crn_dxt_hc_common.h
      src/crn_dxt_image.cpp
      src/crn_dxt_image.h
      src/crn_dynamic_stream.h
      src/crn_dynamic_string.cpp
      src/crn_dynamic_string.h
      src/crn_etc.cpp
      src/crn_etc.h
      src/crn_file_utils.cpp
      src/crn_file_utils.h
      src/crn_find_files.cpp
      src/crn_find_files.h
      src/crn_freeimage_image_utils.h
      src/crn_hash.cpp
      src/crn_hash.h
      src/crn_hash_map.h
      src/crn_helpers.h
      src/crn_huffman_codes.cpp
      src/crn_huffman_codes.h
      src/crn_image.h
      src/crn_image_utils.cpp
      src/crn_image_utils.h
      src/crn_intersect.h
      src/crn_jpgd.cpp
      src/crn_jpgd.h
      src/crn_jpge.cpp
      src/crn_jpge.h
      src/crn_ktx_texture.cpp
      src/crn_ktx_texture.h
      src/crn_lzma_codec.cpp
      src/crn_lzma_codec.h
      src/crn_math.cpp
      src/crn_math.h
      src/crn_matrix.h
      src/crn_mem.cpp
      src/crn_mem.h
      src/crn_miniz.cpp
      src/crn_miniz.h
      src/crn_mipmapped_texture.cpp
      src/crn_mipmapped_texture.h
      src/crn_packed_uint.h
      src/crn_pixel_format.cpp
      src/crn_pixel_format.h
      src/crn_platform.cpp
      src/crn_platform.h
      src/crn_prefix_coding.cpp
      src/crn_prefix_coding.h
      src/crn_qdxt1.cpp
      src/crn_qdxt1.h
      src/crn_qdxt5.cpp
      src/crn_qdxt5.h
      src/crn_radix_sort.h
      src/crn_rand.cpp
      src/crn_rand.h
      src/crn_ray.h
      src/crn_rect.h
      src/crn_resampler.cpp
      src/crn_resampler.h
      src/crn_resample_filters.cpp
      src/crn_resample_filters.h
      src/crn_rg_etc1.cpp
      src/crn_rg_etc1.h
      src/crn_ryg_dxt.cpp
      src/crn_ryg_dxt.hpp
      src/crn_ryg_types.hpp
      src/crn_sparse_array.h
      src/crn_sparse_bit_array.cpp
      src/crn_sparse_bit_array.h
      src/crn_stb_image.cpp
      src/crn_strutils.cpp
      src/crn_strutils.h
      src/crn_symbol_codec.cpp
      src/crn_symbol_codec.h
      src/crn_texture_comp.cpp
      src/crn_texture_comp.h
      src/crn_texture_conversion.cpp
      src/crn_texture_conversion.h
      src/crn_texture_file_types.cpp
      src/crn_texture_file_types.h
      src/crn_threaded_clusterizer.h
      src/crn_threaded_resampler.cpp
      src/crn_threaded_resampler.h
      src/crn_threading.h
      src/crn_threading_null.h
      src/crn_timer.cpp
      src/crn_timer.h
      src/crn_traits.h
      src/crn_tree_clusterizer.h
      src/crn_types.h
      src/crn_utils.cpp
      src/crn_utils.h
      src/crn_value.cpp
      src/crn_value.h
      src/crn_vec.h
      src/crn_vector.cpp
      src/crn_vector.h
      src/crn_vector2d.h
      src/crn_vec_interval.h
      src/crn_winhdr.h
      src/crn_zeng.cpp
      src/crn_zeng.h
      src/lzma_7zBuf.cpp
      src/lzma_7zBuf.h
      src/lzma_7zBuf2.cpp
      src/lzma_7zCrc.cpp
      src/lzma_7zCrc.h
      src/lzma_7zFile.cpp
      src/lzma_7zFile.h
      src/lzma_7zStream.cpp
      src/lzma_7zVersion.h
      src/lzma_Alloc.cpp
      src/lzma_Alloc.h
      src/lzma_Bcj2.cpp
      src/lzma_Bcj2.h
      src/lzma_Bra.cpp
      src/lzma_Bra.h
      src/lzma_Bra86.cpp
      src/lzma_BraIA64.cpp
      src/lzma_CpuArch.h
      src/lzma_LzFind.cpp
      src/lzma_LzFind.h
      src/lzma_LzFindMt.cpp
      src/lzma_LzFindMt.h
      src/lzma_LzHash.h
      src/lzma_LzmaDec.cpp
      src/lzma_LzmaDec.h
      src/lzma_LzmaEnc.cpp
      src/lzma_LzmaEnc.h
      src/lzma_LzmaLib.cpp
      src/lzma_LzmaLib.h
      src/lzma_MyVersion.h
      src/lzma_Threads.cpp
      src/lzma_Threads.h
      src/lzma_Types.h)

if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
  set(crunch_Source ${crunch_Source} 
                    src/crn_threading_win32.cpp
                    src/crn_threading_win32.h)
else()
  set(crunch_Source ${crunch_Source} 
                    src/crn_threading_pthreads.cpp
                    src/crn_threading_pthreads.h)
endif()

add_library(crunch ${crunch_Source})

get_filename_component(ParentDirectory ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
target_include_directories(crunch PUBLIC ${ParentDirectory} ${CMAKE_CURRENT_SOURCE_DIR})
